...
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linear_layout"
            android:background="@drawable/rectangle_rounder_corners_dark_grey"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/edit_text_title"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_title">

        <ImageView
...
                android:layout_height="18dp" />

        <EditText
                android:layout_width="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_weight="1"
                android:id="@+id/edit_text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:singleLine="true"
                android:tag="@string/edit_text"
                android:imeOptions="actionDone"
                android:layout_marginStart="16dp"
...
