...
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">LOGIN</string>
    <string name="client_id">Client ID</string>
    <string name="client_secret">Client Secret</string>
    <string name="please_input_client_id">Please input client ID</string>
    <string name="please_input_client_secret">Please input client secret</string>
    <string name="retry">RETRY</string>
    <string name="no_data_available">No data available</string>
...
