...



    <com.aliumujib.flightyy.ui.views.SolidBackgroundButtonView
            android:layout_width="0dp"
            android:layout_marginTop="32dp"
            android:id="@+id/login_button"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/client_secret"
            app:layout_constraintStart_toStartOf="@id/client_secret"
            app:layout_constraintEnd_toEndOf="@id/client_secret"
            android:layout_height="wrap_content"/>

...
